# somers-monitoring

./: pyproject.toml
src/: 01_preprocessing.py  02_selection.py  03_output.py  03_output_local_run.py  03_output_min_dekkingsgraad.py  03_output_refactor.py  03_output_subwerkgroep.py  04_postprocessing.py  05_year_analysis.py  06_measure_analysis.py  07_visualisation.py  output_functions.py  output_functions_refactor.py
